# snake-env

./: .gitignore  README.md  pyproject.toml
docs/: index.html
src/snake_env/: __init__.py  agent.py  benchmark.py  env.py  infer.py  metrics.py  runner.py  train.py  wandb_utils.py
src/snake_env/models/: __init__.py  efficient.py  hamiltonian.py  q_learning.py
tests/: test_infer.py  test_snake_env.py
