[project]
name            = "snake-env"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.14"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "gymnasium>=1.3.0",
  "loguru>=0.7.3",
  "numpy>=2.4.6",
  "rich>=15.0.0",
  "torch>=2.12.0",
  "wandb>=0.27.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.13",
  "ty>=0.0.37",
]

[build-system]
requires      = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",    # flake8-annotations
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C",      # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FURB",   # refurb
  "I",      # isort
  "G",      # flake8-logging-format
  "N",      # pep8-naming
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # ruff-specific rules
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN", "TRY", "PERF"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true

[tool.ty.rules]
unresolved-import = "ignore"
